# lockgraph

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
scripts/: check.sh
src/lockgraph/: __init__.py  canonical.py  graph.py  lock.py  models.py
tests/: conftest.py  test_canonical.py  test_graph_closure.py  test_graph_dep_names.py  test_graph_edges.py  test_graph_index.py  test_lock.py  test_models.py
tests/fixtures/workspace/: pyproject.toml
tests/fixtures/workspace/apps/web/: LICENSE  pyproject.toml
tests/fixtures/workspace/apps/worker/: pyproject.toml
tests/fixtures/workspace/libs/core/: pyproject.toml
tests/fixtures/workspace/libs/liba/: README.md  pyproject.toml
tests/fixtures/workspace/libs/libb/: README.md  pyproject.toml
